<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <AutoCompleteTextView
        android:id="@+id/autoCompleteWaiter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_waiter_name"
        android:inputType="textPersonName"
        android:completionThreshold="3" />

    <EditText
        android:id="@+id/editTextTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_total_bill"
        android:inputType="numberDecimal" />

    <CheckBox
        android:id="@+id/checkBoxTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/include_tip" />

    <TextView
        android:id="@+id/textViewTipPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_label" />

    <SeekBar
        android:id="@+id/seekBarTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="30"
        android:progress="10" />

    <RadioGroup
        android:id="@+id/radioGroupPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash" />
        <RadioButton
            android:id="@+id/radioCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card" />
    </RadioGroup>

    <RatingBar
        android:id="@+id/ratingBarService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.5" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_total" />

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000000"
        android:paddingTop="10dp" />

    <TextView
        android:id="@+id/textViewPago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingTop="4dp" />

    <TextView
        android:id="@+id/textViewValoracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingTop="4dp" />

    <TextView
        android:id="@+id/textViewCamarero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingTop="4dp" />
</LinearLayout>